--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
     "compilerOptions": {
-        "outDir": "app/dist/js",
+        "outDir": "dist/js",
         "target": "ES6",
         "noEmitOnError": true,
         "noImplicitAny": true,
         "removeComments": true,
-        "strictNullChecks": true,
-        "experimentalDecorators": true,
-        "sourceMap": true
+        "strictNullChecks": true
     },
-    "include": ["app/src/**/*"]
+    "include": ["app/**/*"]
 }
